--- a/Topaz/Topaz.csproj
+++ b/Topaz/Topaz.csproj
@@ -119,6 +119,7 @@
     <Content Include="Scripts\jquery-3.1.1.min.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.js" />
+    <Content Include="Scripts\Views\login.js" />
     <Content Include="Web.config" />
     <Content Include="Views\Layouts\_login.cshtml" />
     <Content Include="Views\User\index.cshtml" />
@@ -149,7 +150,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Scripts\Views\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
